DevOps/force-app/main/default/objects/Case/fields/Access_Case_Submitted_Within_28_Days__c.field-meta.xml
<CustomField>
    <fullName>Access_Case_Submitted_Within_28_Days__c</fullName>
    <formula>IF(KPI_AccessDueDate__c + BPS_Delay_Days__c &gt;= BPS_Plan_Submitted_to_NDIA__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Case Submitted Within 28 Days</label>
    <type>Checkbox</type>
</CustomField>