DevOps/force-app/main/default/objects/Case/fields/Additional_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Additional_Diagnosis__c</fullName>
    <defaultValue>TEXT(999)</defaultValue>
    <label>Additional Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>Anxiety disorders (ATAPS)</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Panic disorder</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Agoraphobia</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Social phobia</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Generalised anxiety disorder</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Obsessive-compulsive disorder</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>Post-traumatic stress disorder</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>Acute stress disorder</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>Other anxiety disorder</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Affective (Mood) disorders (ATAPS)</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Major depressive disorder</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Dysthymia</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>Depressive disorder NOS</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>Bipolar disorder</label>
            </value>
            <value>
                <fullName>205</fullName>
                <label>Cyclothymic disorder</label>
            </value>
            <value>
                <fullName>206</fullName>
                <label>Other affective disorder</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Substance use disorders (ATAPS)</label>
            </value>
            <value>
                <fullName>301</fullName>
                <label>Alcohol harmful use</label>
            </value>
            <value>
                <fullName>302</fullName>
                <label>Alcohol dependence</label>
            </value>
            <value>
                <fullName>303</fullName>
                <label>Other drug harmful use</label>
            </value>
            <value>
                <fullName>304</fullName>
                <label>Other drug dependence</label>
            </value>
            <value>
                <fullName>305</fullName>
                <label>Other substance use disorder</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>Psychotic disorders (ATAPS)</label>
            </value>
            <value>
                <fullName>401</fullName>
                <label>Schizophrenia</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>Schizoaffective disorder</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>Brief psychotic disorder</label>
            </value>
            <value>
                <fullName>404</fullName>
                <label>Other psychotic disorder</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>Separation anxiety disorder</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Attention deficit hyperactivity disorder (ADHD)</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>Conduct disorder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>