DevOps/force-app/main/default/objects/Case/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <description>CC - Date of Admission to the Facility (Hospital, etc)</description>
    <inlineHelpText>CC - Date of Admission to the Facility (Hospital, etc)</inlineHelpText>
    <label>Inpatient Admission Date</label>
    <type>Date</type>
</CustomField>