DevOps/force-app/main/default/objects/Case/fields/AIHW_Support_Period_Id__c.field-meta.xml
<CustomField>
    <fullName>AIHW_Support_Period_Id__c</fullName>
    <formula>IF
(
  OR
  (
    CIMS_Cluster_Id__c = &apos;HYAP&apos;,
    ISBLANK(CIMS_Support_Period_Id__c)
  ),
  CASESAFEID(Id),
  CIMS_Support_Period_Id__c
)</formula>
    <label>AIHW Support Period Id</label>
    <type>Text</type>
</CustomField>