DevOps/force-app/main/default/objects/Case/fields/All_current_supports_in_place__c.field-meta.xml
<CustomField>
    <fullName>All_current_supports_in_place__c</fullName>
    <description>CC - A list of all current supports in place for the participant</description>
    <inlineHelpText>CC - A list of all current supports in place for the participant</inlineHelpText>
    <label>All current supports in place</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>