DevOps/force-app/main/default/objects/Case/fields/AOD_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>AOD_Accommodation__c</fullName>
    <inlineHelpText>Usual accommodation. The participant’s usual type of accommodation just prior to the start of engagement with the program</inlineHelpText>
    <label>Current Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Rented house or flat (public or private)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Privately owned house or flat</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Boarding house</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Hostel/supported accommodation services</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Psychiatric hospital</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Alcohol/other drug treatment residence</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Shelter/refuge</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Prison/detention centre</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Caravan on a serviced site</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>No usual residence/homeless</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Not known</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>