DevOps/force-app/main/default/objects/Case/fields/AOD_CessationReason__c.field-meta.xml
<CustomField>
    <fullName>AOD_CessationReason__c</fullName>
    <label>Cessation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Service completed</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Transferred/referred to another service</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Left without notice</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Left against advice</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Left involuntarily (non-compliance)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Moved out of area</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Sanctioned by drug court/court diversion program</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Imprisoned, other than drug court sanction</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Released from prison</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Died</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>