DevOps/force-app/main/default/objects/Case/fields/AOD_ClientType__c.field-meta.xml
<CustomField>
    <fullName>AOD_ClientType__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Own drug use</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Other&apos;s drug use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>