DevOps/force-app/main/default/objects/Case/fields/AOD_EpisodePostcode__c.field-meta.xml
<CustomField>
    <fullName>AOD_EpisodePostcode__c</fullName>
    <description>The postcode of the client’s usual place of residence at the commencement of the Service Episode.&quot;</description>
    <label>Episode Postcode</label>
    <type>TextArea</type>
</CustomField>