DevOps/force-app/main/default/objects/Case/fields/AOD_EpisodeSuburb__c.field-meta.xml
<CustomField>
    <fullName>AOD_EpisodeSuburb__c</fullName>
    <label>Episode Suburb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>