DevOps/force-app/main/default/objects/Case/fields/AOD_Injecting__c.field-meta.xml
<CustomField>
    <fullName>AOD_Injecting__c</fullName>
    <label>Injecting Drug Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Not collected</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Last injected within the previous 3 months</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Last injected more than 3 months ago but less than 12 months ago</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Last injected 12 months ago or more</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Never injected</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>