DevOps/force-app/main/default/objects/Case/fields/AOD_MainService__c.field-meta.xml
<CustomField>
    <fullName>AOD_MainService__c</fullName>
    <inlineHelpText>The principal service provided to the participant. Once a main service provided has been selected, it cannot be changed. Please use the Other Services Provided field instead.</inlineHelpText>
    <label>Main Service Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Counselling</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Withdrawal management (detoxification)</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Rehabilitation activities</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Maintenance pharmacotherapy (Opioid)</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Maintenance pharmacotherapy (Non-opioid)</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Consultation activities</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>Support and case management only</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Involuntary D&amp;A Treatment (IDAT)</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>Assessment only</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Information and education only</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>