DevOps/force-app/main/default/objects/Case/fields/AOD_ODoC__c.field-meta.xml
<CustomField>
    <fullName>AOD_ODoC__c</fullName>
    <inlineHelpText>This is a multiple response item to allow for the coding of varied drug use. More than one drug may be selected.

Other Drugs of Concern/ Gambling. Any drugs apart from the Principal Drug of Concern/Gambling that the client perceives as being a concern.

To be collected on Commencement of Service Episode, but may be updated or added to if additional drugs of concern are reported at a later date.</inlineHelpText>
    <label>Other Drugs of Concern/Gambling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
                <label>Inadequately Described</label>
            </value>
            <value>
                <fullName>0001</fullName>
                <label>Not Stated</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>No other drugs of concern</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Opioid analgesics, nfd</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>Psychostimulants, nfd</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>Gambling</label>
            </value>
            <value>
                <fullName>1202</fullName>
                <label>Heroin</label>
            </value>
            <value>
                <fullName>1305</fullName>
                <label>Methadone</label>
            </value>
            <value>
                <fullName>2101</fullName>
                <label>Alcohol</label>
            </value>
            <value>
                <fullName>2400</fullName>
                <label>Benzodiazepines, nfd</label>
            </value>
            <value>
                <fullName>3100</fullName>
                <label>Amphetamines, nfd</label>
            </value>
            <value>
                <fullName>3405</fullName>
                <label>MDMA/Ecstasy</label>
            </value>
            <value>
                <fullName>3901</fullName>
                <label>Caffeine</label>
            </value>
            <value>
                <fullName>3903</fullName>
                <label>Cocaine</label>
            </value>
            <value>
                <fullName>3906</fullName>
                <label>Nicotine</label>
            </value>
            <value>
                <fullName>7100</fullName>
                <label>Cannabinoids and related Drugs, nfd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>