DevOps/force-app/main/default/objects/Case/fields/AOD_OtherService__c.field-meta.xml
<CustomField>
    <fullName>AOD_OtherService__c</fullName>
    <label>Other Services Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Counselling</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Withdrawal management (detoxification)</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Rehabilitation activities</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Maintenance pharmacotherapy (Opioid)</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Maintenance pharmacotherapy (Non-opioid)</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Consultation activities</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>No other service provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>