DevOps/force-app/main/default/objects/Case/fields/AOD_PDoCmethod__c.field-meta.xml
<CustomField>
    <fullName>AOD_PDoCmethod__c</fullName>
    <label>Method of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Not collected</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Ingest</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Smoke</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Inject</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Sniff (powder)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Inhale (vapour)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>