DevOps/force-app/main/default/objects/Case/fields/AOD_PreviousServices__c.field-meta.xml
<CustomField>
    <fullName>AOD_PreviousServices__c</fullName>
    <label>Previous Service Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Not collected</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Previous service received</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>No previous service received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>