DevOps/force-app/main/default/objects/Case/fields/AOD_ReferralOut__c.field-meta.xml
<CustomField>
    <fullName>AOD_ReferralOut__c</fullName>
    <inlineHelpText>The type of service to which clients are referred, either during the Service Episode or at the completion of the Service Episode.</inlineHelpText>
    <label>Referral to Another Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>General practitioner</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Medical officer/specialist</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Psychiatric hospital</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Other hospital</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Residential community mental health care unit</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Residential alcohol and other drug treatment agency</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Other residential community care unit</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Education institution</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Non-residential community mental health centre</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Non-residential alcohol and other drug treatment agency</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Non-residential community health centre</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Other non-health service agency</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Workplace (EAP)</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Family and child protection service</label>
            </value>
            <value>
                <fullName>97</fullName>
                <label>No referral</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>