DevOps/force-app/main/default/objects/Case/fields/AOD_ReferralSource__c.field-meta.xml
<CustomField>
    <fullName>AOD_ReferralSource__c</fullName>
    <inlineHelpText>This field is used for The Bridge to capture the source of referral</inlineHelpText>
    <label>Source of Referral to Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Self</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Family member/friend</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>General practitioner</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Medical officer/specialist</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Psychiatric hospital</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Other hospital</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Residential community mental health care unit</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Residential alcohol and other drug treatment agency</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Other residential community care unit</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Education institution</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Non-residential community mental health centre</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Non-residential alcohol and other drug treatment agency</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Non-residential community health centre</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Other non-health service agency</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Police diversion</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Court diversion</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Other criminal justice setting</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Workplace (EAP)</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Family and child protection service</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Needle and syringe program</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Medically supervised injecting centre</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>99</fullName>
                <default>true</default>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>