DevOps/force-app/main/default/objects/Case/fields/AOD_Setting__c.field-meta.xml
<CustomField>
    <fullName>AOD_Setting__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Delivery Setting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>