DevOps/force-app/main/default/objects/Case/fields/Appointment_Held__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Held__c</fullName>
    <formula>IF(NOT(ISBLANK(  BPS_Planning_Meeting_Held__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Held</label>
    <type>Checkbox</type>
</CustomField>