DevOps/force-app/main/default/objects/Case/fields/Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled__c</fullName>
    <formula>IF(NOT(ISBLANK( BPS_Scheduled_Appointment_Date__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Scheduled</label>
    <type>Checkbox</type>
</CustomField>