DevOps/force-app/main/default/objects/Case/fields/Attempted_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Contact_Notes__c</fullName>
    <description>CC - Notes on the Attempts at Contact</description>
    <inlineHelpText>CC - Notes on the Attempts at Contact</inlineHelpText>
    <label>Attempted Contact Notes</label>
    <type>TextArea</type>
</CustomField>