DevOps/force-app/main/default/objects/Case/fields/Attendance_Profile__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Profile__c</fullName>
    <label>Attendance Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexAttendanceProfile</valueSetName>
    </valueSet>
</CustomField>