DevOps/force-app/main/default/objects/Case/fields/BPS_Access_Decision__c.field-meta.xml
<CustomField>
    <fullName>BPS_Access_Decision__c</fullName>
    <inlineHelpText>Setting this field will close the case, if access is met, an NDIS Plan case will be created.</inlineHelpText>
    <label>Access Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Met</fullName>
            </value>
            <value>
                <fullName>Access Declined</fullName>
            </value>
            <value>
                <fullName>Incomplete - Returned to LAC</fullName>
            </value>
            <value>
                <fullName>Requested Further Info</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>