DevOps/force-app/main/default/objects/Case/fields/BPS_Access_Met__c.field-meta.xml
<CustomField>
    <fullName>BPS_Access_Met__c</fullName>
    <formula>BPS_Participant__r.BPS_Access_Met__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Met</label>
    <type>Date</type>
</CustomField>