DevOps/force-app/main/default/objects/Case/fields/BPS_Access_Met_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>BPS_Access_Met_Decision_Date__c</fullName>
    <label>Access Met Decision Date</label>
    <type>Date</type>
</CustomField>