DevOps/force-app/main/default/objects/Case/fields/BPS_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>BPS_Additional_Information__c</fullName>
    <description>BPS - Additional Information</description>
    <inlineHelpText>BPS - Additional Information</inlineHelpText>
    <label>Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>