DevOps/force-app/main/default/objects/Case/fields/BPS_Appointment_Task_Id_18__c.field-meta.xml
<CustomField>
    <fullName>BPS_Appointment_Task_Id_18__c</fullName>
    <label>BPS Appointment Task Id 18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>