DevOps/force-app/main/default/objects/Case/fields/BPS_Approved__c.field-meta.xml
<CustomField>
    <fullName>BPS_Approved__c</fullName>
    <formula>NOT(ISBLANK(BPS_Plan_Approved__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>