DevOps/force-app/main/default/objects/Case/fields/BPS_Assigned_To_CRM_Inbox__c.field-meta.xml
<CustomField>
    <fullName>BPS_Assigned_To_CRM_Inbox__c</fullName>
    <label>Assigned To CRM Inbox</label>
    <type>Date</type>
</CustomField>